--- a/gittest.html
+++ b/gittest.html
@@ -4,7 +4,7 @@
   <title>GIT Test</title>
   <style type="text/css">
     body {
-      background-color: yellow;
+      background-color: green;
     }
   </style>
 </head>
